SERVER-6282 wait-doubling backoff for local mongos errors requiring config server access